--- a/templates/custom-helppage-user.html.twig
+++ b/templates/custom-helppage-user.html.twig
@@ -21,7 +21,7 @@
     <summary aria-controls="enable-description1" role="button" aria-expanded="true" class="claro-details__summary" aria-pressed="true"><h3>Erste Schritte</h3></summary>
     <div class="claro-details__wrapper">
       <p>Nach der Anmeldung auf der Webseite öffnet sich in der Regel die Übersichtsseite für die Inhalte.<br />
-      Auf dieser Übersicht kann jederzeit über das schwarz hinterlegte Menü "Verwalten" -&gt; "Inhalt" zugegriffen werden.<br />
+      Auf dieser Übersicht kann jederzeit über das weiß hinterlegte Menü "Inhalt" zugegriffen werden.<br />
       Oder direkt: <a href="/admin/content">{{host}}/admin/content</a></p>
       {% if blockedit %}
       <p>Diese Übersicht teilt sich in drei Bereiche mit den Menü-Reitern "Inhalt", "Blöcke" und "Medien" auf.</p>
@@ -51,7 +51,7 @@
     <div class="claro-details__wrapper">
     <p>
       Unter anderem auf den Seiten <a href="/node/4">Kontakt</a>, <a href="/node/2">Impressum</a> und <a href="/node/3">Datenschutz</a>, dem Block <a href="/block/4">Kontaktaufnahme</a> am unteren Ende der Webseite und im Quelltext der Webseite werden Ihre Kontaktdaten veröffentlicht.<br/>
-      Damit überall die gleichen Daten hinterlegt sind, greifen alle diese Seiten auf einen gemeinsamen Datensatz zurück, welcher auf der Seite "<a href="/admin/config/search/custom-company-token">Einstellungen der Adressdaten</a>" hinterlegt ist. Diese Seite finden Sie auch über das Hauptmenü unter "Verwalten > Konfguration > Suche und Metadaten > Adressdaten".
+      Damit überall die gleichen Daten hinterlegt sind, greifen alle diese Seiten auf einen gemeinsamen Datensatz zurück, welcher auf der Seite "<a href="/admin/config/search/custom-company-token">Einstellungen der Adressdaten</a>" hinterlegt ist. Diese Seite finden Sie auch über das Hauptmenü unter "Konfguration > Suche und Metadaten > Adressdaten".
     </p>
     <p>Wenn Sie die Texte der genannten Seiten bearbeiten, werden Sie feststellen, dass dort statt der sichtbaren Adressdaten lediglich "Tokens" ("Ersetzungsmuster") in der Form <i>[company:name]</i> eingefügt sind. Diese Token werden beim Aufrufen der Webseite durch die entsprechenden Datensätze ausgetauscht. Wenn Sie also auf der Seite "<a href="/admin/config/search/custom-company-token">Eigene Firmen-Tokens</a>" die Daten ändern, ändern Sie damit auch automatisch alle Angaben auf den anderen (s.o.) Stellen der Webseite.</p>
     </div>
@@ -77,7 +77,7 @@
 
         <li>Alternativ kann jeder Inhalt auch direkt auf der entsprechenden Seite zum Bearbeiten geöffnet werden: Wird zum Beispiel die Seite <a href="/node/2">Impressum</a> im Browser aufgerufen, dann erscheint in der Nähe des Seitentitels ein Menü "Ansicht | Bearbeiten | Löschen". Bei Klick auf "Bearbeiten" öffnet sich das Formular zum Bearbeiten des Textes.</li>
 
-        <li>Eine weitere Alternative (auch zum <strong>Bearbeiten weiterer Inhalte</strong>): Wenn Sie eine Seite Ihrer Webseite im Browser zur Ansicht geöffnet haben, dann erscheint ganz oben rechts im schwarz hinterlegten Menü nach einem Klick auf "Bearbeiten" (neben dem Stift-Symbol) auch ein kleines rundes Stift-Symbol rechts oberhalb aller editierbaren Inhalte (auch z.B. der Menüpunkte oder der Texte am Ende der Webseite).<br>
+        <li>Eine weitere Alternative (auch zum <strong>Bearbeiten weiterer Inhalte</strong>): Wenn Sie eine Seite Ihrer Webseite im Browser zur Ansicht geöffnet haben, dann erscheint ganz oben links neben Ihrem Namen nach einem Klick auf "Bearbeiten" auch ein kleines rundes Stift-Symbol rechts oberhalb aller editierbaren Inhalte (auch z.B. der Menüpunkte oder der Texte am Ende der Webseite).<br>
         <img src="{{assets}}/edit-button.png" alt="Bearbeiten-Button" width="460" height="267"><br>
         Bei Klick auf das jeweilige Stift-Symbol und Auswahl von "Bearbeiten" öffnet sich das Formular zum Bearbeiten des ausgewählten Inhalts.</li>
       </ul>
