--- a/templates/custom-helppage-user.html.twig
+++ b/templates/custom-helppage-user.html.twig
@@ -51,9 +51,9 @@
     <div class="claro-details__wrapper">
     <p>
       Unter anderem auf den Seiten <a href="/node/4">Kontakt</a>, <a href="/node/2">Impressum</a> und <a href="/node/3">Datenschutz</a>, dem Block <a href="/block/4">Kontaktaufnahme</a> am unteren Ende der Webseite und im Quelltext der Webseite werden Ihre Kontaktdaten veröffentlicht.<br/>
-      Damit überall die gleichen Daten hinterlegt sind, greifen alle diese Seiten auf einen gemeinsamen Datensatz zurück, welcher auf der Seite "<a href="/admin/config/search/custom-company-token">Einstellungen der Adressdaten</a>" hinterlegt ist. Diese Seite finden Sie auch über das Hauptmenü unter "Konfguration > Suche und Metadaten > Adressdaten".
+      Damit überall die gleichen Daten hinterlegt sind, greifen alle diese Seiten auf einen gemeinsamen Datensatz zurück, welcher auf der Seite "<a href="/admin/config/content/custom-company-token">Einstellungen der Adressdaten</a>" hinterlegt ist. Diese Seite finden Sie auch über das Hauptmenü unter "Konfiguration > Inhaltserstellung > Adressdaten".
     </p>
-    <p>Wenn Sie die Texte der genannten Seiten bearbeiten, werden Sie feststellen, dass dort statt der sichtbaren Adressdaten lediglich "Tokens" ("Ersetzungsmuster") in der Form <i>[company:name]</i> eingefügt sind. Diese Token werden beim Aufrufen der Webseite durch die entsprechenden Datensätze ausgetauscht. Wenn Sie also auf der Seite "<a href="/admin/config/search/custom-company-token">Eigene Firmen-Tokens</a>" die Daten ändern, ändern Sie damit auch automatisch alle Angaben auf den anderen (s.o.) Stellen der Webseite.</p>
+    <p>Wenn Sie die Texte der genannten Seiten bearbeiten, werden Sie feststellen, dass dort statt der sichtbaren Adressdaten lediglich "Tokens" ("Ersetzungsmuster") in der Form <i>[company:name]</i> eingefügt sind. Diese Token werden beim Aufrufen der Webseite durch die entsprechenden Datensätze ausgetauscht. Wenn Sie also auf der Seite "<a href="/admin/config/content/custom-company-token">Eigene Firmen-Tokens</a>" die Daten ändern, ändern Sie damit auch automatisch alle Angaben auf den anderen (s.o.) Stellen der Webseite.</p>
     </div>
   </details>
 
