Add module critical_css to Optimize-Section

--- a/templates/custom-helppage-admin.html.twig
+++ b/templates/custom-helppage-admin.html.twig
@@ -265,6 +265,8 @@
 
           <li><input type="checkbox" />critical.css
             <br />
+            <a href="https://www.drupal.org/project/critical_css">drupal.org/project/critical_css</a>
+            <br />
             <a href="https://www.sitelocity.com/critical-path-css-generator">https://www.sitelocity.com/critical-path-css-generator</a>
             <br />
             <a href="https://jonassebastianohlsson.com/criticalpathcssgenerator/">https://jonassebastianohlsson.com/criticalpathcssgenerator/</a></li>
